--- a/css/main.css
+++ b/css/main.css
@@ -221,7 +221,7 @@ input, select, textarea {
 			font-size: 1.25em;
 		}
 
-/* Container */
+/*   */
 
 	.container {
 		margin: 0 auto;
@@ -2443,4 +2443,3 @@ input, select, textarea {
 					}
 
 	}
-
