Added problem formulation section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2453,3 +2453,11 @@ input, select, textarea {
 .emails {
 	color: yellow;
 }
+
+.subjects {
+	color: #10BEF1;
+}
+
+#teamTitle {
+	text-decoration: underline;
+}
